Adding everything at once.

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Emily Egan | UX Designer and Developer</title>
+  <meta name="description" content="Online portfolio for Emily Egan. UX Designer and Developer with 11 years of experience." />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="DC.Title" content="UX Designer and Developer" />
+    <meta name="DC.Creator" content="Emily Egan" />
+    <meta name="DC.Subject" content="UX Design, UX Development, UX Engineering, Design systems" />
+     <meta name="DC.Publisher" content="https://eegans.github.io/portfolio/" />
+    <meta name="DC.Date" content="6-26-2022" />
+    <meta name="DC.Type" content="Image, Text" />
+    <meta name="DC.Language" content="en" />
 </head>
 <body>
   <app-root></app-root>
